# komodo-codex-env

./: FVM_FIX_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_setup.sh  test_fvm_flutter.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: integration-tests.yml  unit-tests.yml
docs/: CONTAINER_ENGINE_CONFIGURATION.md  DEVELOPMENT.md  FVM_CONFIGURATION.md  PROJECT_STRUCTURE.md  README.md  TEST_FIXES_SUMMARY.md
docs/android/: ANDROID_SDK_GUIDE.md  ANDROID_SDK_IMPLEMENTATION.md
docs/flutter/: FVM_CONFIGURATION.md
docs/flutter/android/: ANDROID_SDK_GUIDE.md  ANDROID_SDK_IMPLEMENTATION.md
scripts/: README.md  fetch_params.sh  install_android_sdk.py  install_android_sdk.sh  run_setup.sh  run_tests.py  setup_dev_env.sh  test-install.sh  verify_fvm.py  verify_installation.py
scripts/test/: test_android_install.py  test_docker_install.py  test_fvm_flutter.sh  test_integration.py  test_root_flag.sh
src/komodo_codex_env/: __init__.py  android_manager.py  cli.py  config.py  dependency_manager.py  documentation_manager.py  executor.py  flutter_manager.py  git_manager.py  kdf_manager.py  setup.py
test/: test_android_install.sh
tests/integration/: README.md  base_integration_test.py  container_engine.py  run_tests.py  test_android_fvm_locations.py  test_docker_install.py  test_docker_install_komodo_wallet.py  test_docs_location.py  test_flutter_android_integration.py  test_flutter_only_integration.py  test_kdf_rust_integration.py  test_kdf_sdk_integration.py  test_komodo_wallet_build.py  test_optimized_android_fvm.py  test_setup.py  validate_tests.py
tests/unit/: test_android_fvm_paths.py  test_android_manager.py  test_setup.py  test_system_deps.py
