[project]
name = "komodo-codex-env"
version = "1.3.0"
description = "Python-based Flutter environment setup tool for Komodo Codex - replacement for bash script"
readme = "README.md"
authors = [{ name = "Komodo Platform", email = "support@komodoplatform.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["flutter", "development", "environment", "setup", "komodo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
dependencies = [
    "click>=8.2.1",
    "packaging>=25.0",
    "pathlib-mate>=1.3.2",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/KomodoPlatform/komodo-codex-env"
Repository = "https://github.com/KomodoPlatform/komodo-codex-env"
Documentation = "https://github.com/KomodoPlatform/komodo-codex-env#readme"
Issues = "https://github.com/KomodoPlatform/komodo-codex-env/issues"

[project.scripts]
komodo-codex-env = "komodo_codex_env.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Test", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
]

[tool.rye]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-xdist>=3.7.0",
]
